--- a/project_1.html
+++ b/project_1.html
@@ -2,6 +2,8 @@
 <head>
     <script src="https://d3js.org/d3.v3.min.js"></script>
     <title>H517 Project 1: John Snow 1854 Cholera Map</title>
+    <p>Documentation: https://josephchow20.github.io/H517_project1/documentation.html</p>
+    <p>Demo Video: https://iu.mediaspace.kaltura.com/media/t/1_f2gihmf0</p>
 </head>
 <body>
     <p>
